fix url path again

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <img src="logo.png" alt="NoPotato" class="logo" />
-        <a href="/">
+        <a href="/NoPotato">
             <img src="logotext.png" class="logotext" />
         </a>
     </header>
